# viplex

./: README.md  common.go  go.mod  interface.go  main  main.go  viplex
ViplexCoreCentOS/demo/cpp/simpleDemo/: CentOSbuildsimpledemo.sh  Ubuntubuildsimpledemo.sh  buildpublicnetdemo.sh  macOSbuildsimpledemo.sh  main.cpp  publicnetdemo.cpp  simpleDemo.sln  simpleDemo.vcxproj
ViplexCoreCentOS/demo/cpp/viplexcoreDemo/: CMakeLists.txt  changepassword.cpp  changepassword.h  changepassword.ui  demoChildGUI.cpp  demoChildGUI.h  demoChildGUI.ui  demoGUI.cpp  demoGUI.h  demoGUI.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  resource.h  version.rc  viplexcoreDemo.pro
ViplexCoreCentOS/demo/cpp/viplexcoreDemo/exportgenerator/: csharpexportgenerator.h  exportgenerator.h  javaexportgenerator.h  ochexportgenerator.h  ocmexportgenerator.h
ViplexCoreCentOS/demo/java/: runDemo.bat  runDemo.sh
ViplexCoreCentOS/demo/java/src/: publicNet.java  qt.conf  test.java  viplexcore.java
ViplexCoreCentOS/include/: exportdefine.h  exportviplexcore.h  exportviplexcoreasync.h  exportviplexcoreasyncunicode.h  viplexcore_global.h  viplexcoreasync.h
ViplexCoreCentOS/include/QtCore/: qconfig.h
ViplexCoreCentOS/include/viplexcommon/: fromstring.h  viplexcommon_global.h
ViplexCoreCentOS/include/viplexcommon/interface/: iviplexrequester.h  viplexerror.h
ViplexCoreCentOS/include/viplexcommon/jsonserializer/: jsoncommand.h  jsoncommon.h  jsonserializer.h  protocoljson.h
cgo_interface/: getProgram.go  init.go  initPublic.go
common/: common.go
temp/db/: viplexcore.db
